using akka from github instead of precompiled version